sửa một số lỗi liên quan đến verifyotp, emiail gửi otp
