# apps/auth-service/src/routes/auth.router.ts
@@ -1,9 +1,10 @@
 import express, { Router } from "express";
-import { userRegister } from "@/controller/auth.controller";
+import { userRegister, verifyUser } from "@/controller/auth.controller";
 
 const router: Router = express.Router();
 
 router.post("/user-registration", userRegister);
+router.post("/verify-registration",verifyUser)
 
 
 
