# apps/auth-service/src/swagger-output.json
@@ -6,37 +6,89 @@
     "version": "1.0.0"
   },
   "host": "localhost:6001",
-  "basePath": "/",
+  "basePath": "/api",
   "schemes": [
     "http"
   ],
   "paths": {
-    "/api/user-registration": {
+    "/user-registration": {
       "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Register a new user",
         "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "description": "Registration credentials.",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "name": {
-                  "example": "quan"
+                  "type": "string",
+                  "example": "Jonny đéc"
                 },
                 "email": {
-                  "example": "quan@qshop.com"
+                  "type": "string",
+                  "example": "john@example.com"
                 },
                 "password": {
-                  "example": "123456"
+                  "type": "string",
+                  "example": "password123"
                 }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/verify-registration": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Verify user registration with OTP",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Verification credentials.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "John Doe"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "john@example.com"
+                },
+                "otp": {
+                  "type": "string",
+                  "example": "1234"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "password123"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
